      (Robert Collins)

    * Move most SmartServer code into a new package, bzrlib/smart.
      bzrlib/transport/remote.py contains just the Transport classes that used
      to be in bzrlib/transport/smart.py.  (Andrew Bennetts)

    * urllib http implementation avoid roundtrips associated with 401 errors
      once the the authentication succeeds. (Vincent Ladeuil).

    * Renamed SmartTransport (and subclasses like SmartTCPTransport) to
      RemoteTransport (and subclasses to RemoteTCPTransport, etc).  This is more
      consistent with its new home in bzrlib/transport/remote.py, and because
      it's not really a "smart" transport, just one that does file operations
      via remote procedure calls.  (Andrew Bennetts)
 
    * The ``lock_write`` method of ``LockableFiles``, ``Repository`` and
     ``Branch`` now accept a ``token`` keyword argument, so that separate
     instances of those objects can share a lock if it has the right token.
     (Andrew Bennetts, Robert Collins)

  BUGFIXES:

    * Don't fail bundle selftest if email has 'two' embedded.  
      (#98510, Ian Clatworthy)

    * Remove ``--verbose`` from ``bzr bundle``. It didn't work anyway.
      (Robert Widhopf-Fenk, #98591)

    * Remove ``--basis`` from the checkout/branch commands - it didn't work
      properly and is no longer beneficial. Fixes #53675 and #43486.
      (Robert Collins)

    * Don't produce encoding error when adding duplicate files.
      (Aaron Bentley)

    * Teach ``common_ancestor`` to shortcut when the tip of one branch is
      inside the ancestry of the other. Saves a lot of graph processing
      (with an ancestry of 16k revisions, ``bzr merge ../already-merged``
      changes from 2m10s to 13s).  (John Arbash Meinel, #103757)

    * Fix ``show_diff_trees`` to handle the case when a file is modified,
      and the containing directory is renamed. (The file path is different
      in this versus base, but it isn't marked as a rename).